<package format="2">
  <name>turtlebot_sim_stacks</name>
  <version>0.0.1</version>
  <description>This package provides launch file for operating turtlebot_sim_stacks</description>

  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/</url>


  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>
  <author email="jane.doe@example.com">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <!--test_depend>roslaunch</test_depend-->

</package>