<package format="2">
  <name>turtlebot_teleop_system</name>
  <version>0.0.1</version>
  <description>This package provides launch file for operating turtlebot_teleop_system</description>

  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/</url>


  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>
  <author email="jane.doe@example.com">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>turtlebot3_fake</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>turtlebot3_teleop</exec_depend>
  <!--test_depend>roslaunch</test_depend-->

</package>
