<package format="2">
  <name>agriculture_demo_stacks_teleop</name>
  <version>0.0.1</version>
  <description>This package provides launch file for operating agriculture_demo_stacks_teleop</description>

  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/</url>


  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>
  <author email="jane.doe@example.com">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>interactive_marker_twist_server</exec_depend>
  <!--test_depend>roslaunch</test_depend-->

</package>