<package format="2">
  <name>communication_ros1_publisher_stack</name>
  <version>0.0.1</version>
  <description>This package provides launch file for operating communication_ros1_publisher_stack</description>

  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/</url>


  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>
  <author email="jane.doe@example.com">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roscpp_tutorials</exec_depend>
  <!--test_depend>roslaunch</test_depend-->

</package>