<package format="2">
  <name>jackal_teleop_stacks_sp3_base</name>
  <version>0.0.1</version>
  <description>This package provides launch file for operating jackal_teleop_stacks_sp3_base</description>

  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/</url>


  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>
  <author email="jane.doe@example.com">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>jackal_base</exec_depend>
  <exec_depend>nmea_navsat_driver</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <!--test_depend>roslaunch</test_depend-->

</package>