<package format="2">
  <name>jackal_teleop_stacks_sp3_ori_localization</name>
  <version>0.0.1</version>
  <description>This package provides launch file for operating jackal_teleop_stacks_sp3_ori_localization</description>

  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/</url>


  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>
  <author email="jane.doe@example.com">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>jackal_control</exec_depend>
  <!--test_depend>roslaunch</test_depend-->

</package>
