<package format="2">
  <name>base_nav</name>
  <version>0.0.1</version>
  <description>This package provides launch file for operating base_nav</description>

  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/</url>


  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>
  <author email="jane.doe@example.com">Jane Doe</author>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cob_sick_s300</exec_depend>
  <exec_depend>ridgeback_base</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>cob_scan_unifier</exec_depend>
  <!--test_depend>roslaunch</test_depend-->

</package>